; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_mcd.c_SekRunS68k.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_mcd.c_SekRunS68k.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }
%struct.TYPE_7__ = type { i32 }

@SekCycleAimS68k = common dso_local global i32 0, align 4
@SekCycleCntS68k = common dso_local global i32 0, align 4
@Pico_mcd = common dso_local global %struct.TYPE_6__* null, align 8
@PicoCpuCS68k = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@PicoCpuFM68k = common dso_local global i32 0, align 4
@PicoCpuFS68k = common dso_local global i32 0, align 4
@PicoCpuMM68k = common dso_local global i32 0, align 4
@PicoCpuMS68k = common dso_local global i32 0, align 4
@g_m68kcontext = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @SekRunS68k to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SekRunS68k(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  store i32 %4, i32* @SekCycleAimS68k, align 4
  %5 = load i32, i32* @SekCycleAimS68k, align 4
  %6 = load i32, i32* @SekCycleCntS68k, align 4
  %7 = sub nsw i32 %5, %6
  store i32 %7, i32* %3, align 4
  %8 = icmp sle i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %21

10:                                               ; preds = %1
  %11 = call i64 (...) @SekShouldInterrupt()
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %10
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** @Pico_mcd, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* @SekCycleCntS68k, align 4
  %20 = add nsw i32 %19, %18
  store i32 %20, i32* @SekCycleCntS68k, align 4
  br label %21

21:                                               ; preds = %17, %9
  ret void
}

declare dso_local i64 @SekShouldInterrupt(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
